--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,15 @@
     <modules>
         <module>provider</module>
         <module>consumer</module>
-        <module>nacos-config</module>
+        <module>common</module>
+        <module>chen-gateway</module>
     </modules>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
     <dependencyManagement>
